升级增加全市场统计功能

--- a/dq_alpha_one/templates/dq_alpha_one/index.html
+++ b/dq_alpha_one/templates/dq_alpha_one/index.html
@@ -20,8 +20,26 @@
         </div>
     </div>
 
-    <hr>
-    {% include 'dq_alpha_one/inc_alpha_dmap.html' %}
+    <div class="row justify-content-center" style="margin-top: 3em">
+        <div class="col col-lg-1">
+        </div>
+        <div class="col-md-auto">
+            {% include 'dq_alpha_one/inc_alpha_dmap.html' %}
+        </div>
+        <div class="col col-lg-2">
+        </div>
+    </div>
+
+    <div class="row justify-content-center" style="margin-top: 3em">
+        <div class="col col-lg-1">
+        </div>
+        <div class="col-md-auto">
+            {% include 'dq_alpha_one/inc_alpha_more_value.html' %}
+        </div>
+        <div class="col col-lg-2">
+        </div>
+    </div>
+
 
 {% endblock %}
 
