--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -12,6 +12,33 @@
         <div class="col col-lg-1">
         </div>
         <div class="col-md-auto">
+            {% include 'statistic/inc_daily.html' %}
+        </div>
+        <div class="col col-lg-2">
+        </div>
+    </div>
+    <div class="row justify-content-center" style="margin-top: 3em">
+        <div class="col col-lg-1">
+        </div>
+        <div class="col-md-auto">
+            {% include 'statistic/inc_weekly.html' %}
+        </div>
+        <div class="col col-lg-2">
+        </div>
+    </div>
+    <div class="row justify-content-center" style="margin-top: 3em">
+        <div class="col col-lg-1">
+        </div>
+        <div class="col-md-auto">
+            {% include 'statistic/inc_monthly.html' %}
+        </div>
+        <div class="col col-lg-2">
+        </div>
+    </div>
+    <div class="row justify-content-center" style="margin-top: 3em">
+        <div class="col col-lg-1">
+        </div>
+        <div class="col-md-auto">
             <h2>量化艺术</h2>
             <video id="js_video" width="677px" height="540px" autoplay="" controls=""
                    src="{% static 'video/lhys.mp4' %}"></video>
