--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap 的 CSS 文件 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-          integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'bootstrap-4.6.2/css/bootstrap.min.css' %}">
+    {#    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"#}
+    {#          integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">#}
     {#  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">#}
 
     <link rel="shortcut icon" href="">
@@ -99,7 +100,7 @@
                 <div class="dropdown-menu dropdown-menu-md-right">
                     <a class="dropdown-item" href="{% url 'stra:bt_per_2' %}">屿阔成长1号</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'stra:bt_per_2_4' %}">碓全屿阔</a>
+                    <a class="dropdown-item" href="{% url 'stra:bt_per_2_4' %}">碓泉屿阔</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'stra:bt_cap_and_money' %}">组合市值&成交金额</a>
 
@@ -177,12 +178,14 @@
 {#<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"#}
 {#        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"#}
 {#        crossorigin="anonymous"></script>#}
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-        crossorigin="anonymous"></script>
+{#<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"#}
+{#        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"#}
+{#        crossorigin="anonymous"></script>#}
+{#<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"#}
+{#        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"#}
+{#        crossorigin="anonymous"></script>#}
+
+<script src="{% static 'bootstrap-4.6.2/js/bootstrap.min.js' %}"></script>
 {% block footer %}{% endblock %}
 <script>
     $(function () {
