--- a/TradeLoss/templates/TradeLoss/trade_alpha_one.html
+++ b/TradeLoss/templates/TradeLoss/trade_alpha_one.html
@@ -13,7 +13,7 @@
         <div class="col col-lg-1">
         </div>
         <div class="col-md-auto">
-            <h2>摩擦损失绝对值与产品规模的关系</h2>
+            <h2>摩擦损失绝对值与产品规模(实盘)的关系</h2>
             {% include 'dq_alpha_one/alpha_and_trade_loss.html' %}
         </div>
         <div class="col col-lg-2">
