优化交易摩擦损失展示，增加全量折线图

--- a/TradeLoss/templates/TradeLoss/trade_loss.html
+++ b/TradeLoss/templates/TradeLoss/trade_loss.html
@@ -12,6 +12,14 @@
     <div class="row justify-content-center" style="margin-top: 3em">
         <div class="col col-lg-1"></div>
         <div class="col-md-auto">
+            <h2>交易摩擦--全量趋势图</h2>
+            {% include 'TradeLoss/inc_area_and_lines.html' %}
+        </div>
+        <div class="col col-lg-2"></div>
+    </div>
+    <div class="row justify-content-center" style="margin-top: 3em">
+        <div class="col col-lg-1"></div>
+        <div class="col-md-auto">
             <h2>交易摩擦--每日</h2>
             {% include 'TradeLoss/inc_laest_sum_and_cent_bar.html' %}
         </div>
