1、各策略 VaR & ES 计算，且可视化为热力图

--- a/mult_factor/templates/mult_factor/per_2/index_bt_per_2.html
+++ b/mult_factor/templates/mult_factor/per_2/index_bt_per_2.html
@@ -15,6 +15,7 @@
         <div class="col-md-auto">
             <h2>策略 | 屿阔成长1号</h2>
             {% include 'mult_factor/per_2/inc_all.html' %}
+            {% include 'mult_factor/per_2/inc_VaR_ES.html' %}
         </div>
         <div class="col col-lg-2">
         </div>
