--- a/mult_factor/templates/mult_factor/alpha_one/index_bt_alpha_one.html
+++ b/mult_factor/templates/mult_factor/alpha_one/index_bt_alpha_one.html
@@ -15,6 +15,7 @@
         <div class="col-md-auto">
             <h2>策略 | 可变@1号</h2>
             {% include 'mult_factor/alpha_one/inc_all.html' %}
+            {% include 'mult_factor/alpha_one/inc_VaR_ES.html' %}
         </div>
         <div class="col col-lg-2">
         </div>
