--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,8 @@
                     <a class="dropdown-item" href="{% url 'stra:bt_per_2_4' %}">碓泉屿阔</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'stra:bt_cap_and_money' %}">组合市值&成交金额</a>
-
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'stra:bt_VaR_and_ES' %}">VaR & ES 对比</a>
                 </div>
             </li>
             <li class="nav-item">
